Revert "Fix overflow new sidebar menu in atum template"
This reverts commit a1d50e73a88cadaa345d312654ca2cc44b0913d5.

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -5,7 +5,6 @@
   min-height: calc(100vh - 69px);
   background-color: var(--atum-sidebar-bg);
   box-shadow: 0 0 20px -10px var(--atum-bg-dark-50);
-  overflow-x: hidden;
 
   .sidebar-sticky {
     position: sticky;
